--- a/styles.css
+++ b/styles.css
@@ -36,13 +36,18 @@ body {
     background: black;
 }
 
-img {
+video {
     width: 700px;
     height: 450px;
+    max-width: 100%;
+ height: auto;
+ width: auto\9; /* для ie8 */
 }
+
 div {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1em;
     padding: 10px;
     letter-spacing: 0.2em;
 }
+@media (max-width:768px) {
